Source/WebKit/blackberry/Api/WebPage.cpp
@@ -3690,27 +3690,11 @@ void WebPagePrivate::setViewportSize(const IntSize& transformedActualVisibleSize
     if (!m_visible || !m_backingStore->d->isActive())
         setShouldResetTilesWhenShown(true);
 
-    bool needsLayout = false;
     bool hasPendingOrientation = m_pendingOrientation != -1;
 
     if (m_hasPendingSurfaceSizeChange) {
         resizeSurfaceIfNeeded();
         m_hasPendingSurfaceSizeChange = false;
-    }
-    if (!hasPendingOrientation) {
-        // If we are not rotating and we've started a viewport resize with
-        // the Render tree in dirty state (i.e. it needs layout), lets
-        // reset the needsLayout flag for now but set our own 'needsLayout'.
-        //
-        // Reason: calls like ScrollView::setFixedLayoutSize can trigger a layout
-        // if the render tree needs it. We want to avoid it till the viewport resize
-        // is actually done (i.e. ScrollView::setViewportSize gets called
-        // further down the method).
-        if (m_mainFrame->view()->needsLayout()) {
-            m_mainFrame->view()->unscheduleRelayout();
-            m_mainFrame->contentRenderer()->setNeedsLayout(false);
-            needsLayout = true;
-        }
     }
 
     // The window buffers might have been recreated, cleared, moved, etc., so:
@@ -3736,6 +3720,7 @@ void WebPagePrivate::setViewportSize(const IntSize& transformedActualVisibleSize
     setDefaultLayoutSize(transformedActualVisibleSize);
 
     // Recompute our virtual viewport.
+    bool needsLayout = false;
     static ViewportArguments defaultViewportArguments;
     if (m_viewportArguments != defaultViewportArguments) {
         // We may need to infer the width and height for the viewport with respect to the rotation.
